--- a/EvoWindows/EvoWindows.vcxproj
+++ b/EvoWindows/EvoWindows.vcxproj
@@ -77,10 +77,10 @@
     <IncludePath>$(SolutionDir)EvoHistGlue;$(SolutionDir)Direct3D;$(SolutionDir)ShapeLib;$(SolutionDir)EvolutionCoreInterface;$(SolutionDir)Utilities;$(SolutionDir)runtimeCPP;$(SolutionDir)HistoryInterface;$(SolutionDir)win32_utilities;$(SolutionDir)Win32_history;C:\Program Files (x86)\Microsoft DirectX SDK (June 2010)\Include;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <IncludePath>$(SolutionDir)EvoHistGlue;$(SolutionDir)Direct3D;$(SolutionDir)ShapeLib;$(SolutionDir)EvolutionCoreInterface;$(SolutionDir)Utilities;$(SolutionDir)runtimeCPP;$(SolutionDir)HistoryInterface;$(SolutionDir)win32_utilities;$(SolutionDir)Win32_history;C:\Program Files (x86)\Microsoft DirectX SDK (June 2010)\Include;$(IncludePath)</IncludePath>
+    <IncludePath>$(SolutionDir)EvoHistGlue;$(SolutionDir)Direct3D;$(SolutionDir)ShapeLib;$(SolutionDir)EvolutionCoreInterface;$(SolutionDir)Utilities;$(SolutionDir)runtimeCPP;$(SolutionDir)HistoryInterface;$(SolutionDir)win32_utilities;$(SolutionDir)Win32_history;$(SolutionDir)Win32_appFramework;C:\Program Files (x86)\Microsoft DirectX SDK (June 2010)\Include;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-    <IncludePath>$(SolutionDir)EvoHistGlue;$(SolutionDir)Direct3D;$(SolutionDir)ShapeLib;$(SolutionDir)EvolutionCoreInterface;$(SolutionDir)Utilities;$(SolutionDir)runtimeCPP;$(SolutionDir)HistoryInterface;$(SolutionDir)win32_utilities;$(SolutionDir)Win32_history;C:\Program Files (x86)\Microsoft DirectX SDK (June 2010)\Include;$(IncludePath)</IncludePath>
+    <IncludePath>$(SolutionDir)EvoHistGlue;$(SolutionDir)Direct3D;$(SolutionDir)ShapeLib;$(SolutionDir)EvolutionCoreInterface;$(SolutionDir)Utilities;$(SolutionDir)runtimeCPP;$(SolutionDir)HistoryInterface;$(SolutionDir)win32_utilities;$(SolutionDir)Win32_history;$(SolutionDir)Win32_appFramework;C:\Program Files (x86)\Microsoft DirectX SDK (June 2010)\Include;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
@@ -158,7 +158,6 @@
     <ClCompile Include="win32_protocolServer.cpp" />
     <ClCompile Include="win32_speedControl.cpp" />
     <ClCompile Include="win32_statistics.cpp" />
-    <ClCompile Include="win32_status.cpp" />
     <ClCompile Include="win32_EvoWorkThread.cpp" />
     <ClCompile Include="win32_EvoWorkThreadInterface.cpp" />
     <ClCompile Include="win32_wrappers.cpp" />
@@ -182,7 +181,6 @@
     <ClInclude Include="win32_scriptHook.h" />
     <ClInclude Include="win32_speedControl.h" />
     <ClInclude Include="win32_statistics.h" />
-    <ClInclude Include="win32_status.h" />
     <ClInclude Include="win32_textDisplay.h" />
     <ClInclude Include="win32_EvoWorkThread.h" />
     <ClInclude Include="win32_EvoWorkThreadInterface.h" />
