Refactoring. Complete window procedure of App window moved to framework.

--- a/Evolution/Evolution.vcxproj.filters
+++ b/Evolution/Evolution.vcxproj.filters
@@ -30,9 +30,6 @@
     <ClInclude Include="Version.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
-    <ClInclude Include="win32_appMenu.h">
-      <Filter>Headerdateien</Filter>
-    </ClInclude>
     <ClInclude Include="win32_evoController.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
@@ -40,6 +37,9 @@
       <Filter>Headerdateien</Filter>
     </ClInclude>
     <ClInclude Include="GenerationDisplay.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
+    <ClInclude Include="win32_evoAppMenu.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
   </ItemGroup>
@@ -53,9 +53,6 @@
     <ClCompile Include="win32_appWindow.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
-    <ClCompile Include="win32_appMenu.cpp">
-      <Filter>Quelldateien</Filter>
-    </ClCompile>
     <ClCompile Include="win32_evoController.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
@@ -63,6 +60,9 @@
       <Filter>Quelldateien</Filter>
     </ClCompile>
     <ClCompile Include="GenerationDisplay.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
+    <ClCompile Include="win32_evoAppMenu.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
   </ItemGroup>
