--- a/Evolution/WindowConfiguration3.cnf
+++ b/Evolution/WindowConfiguration3.cnf
@@ -1,5 +1,5 @@
 MoveWindow IDM_APPL_WINDOW 3832 1057 2576 1056
-ShowWindow IDM_APPL_WINDOW SW_MAXIMIZE
+ShowWindow IDM_APPL_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_PERF_WINDOW 6090 1217 301 131
 ShowWindow IDM_PERF_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_CONS_WINDOW -1072 1435 721 661
@@ -15,6 +15,6 @@ ShowWindow IDM_DISP_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_EDIT_WINDOW 3839 1568 331 486
 ShowWindow IDM_EDIT_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_MINI_WINDOW 5837 1234 316 239
-ShowWindow IDM_MINI_WINDOW SW_HIDE
+ShowWindow IDM_MINI_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_MAIN_WINDOW 3840 1108 2560 945
 ShowWindow IDM_MAIN_WINDOW SW_SHOWNORMAL
