--- a/NNetSimu/NNetSimu.vcxproj
+++ b/NNetSimu/NNetSimu.vcxproj
@@ -163,14 +163,14 @@
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="Version.h" />
-    <ClInclude Include="win32_NNetSimuMenu.h" />
+    <ClInclude Include="win32_NNetAppMenu.h" />
     <ClInclude Include="win32_NNetSimuWindow.h" />
     <ClInclude Include="win32_NNetSimuController.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="NNetSimu.cpp" />
     <ClCompile Include="stdafx.cpp" />
-    <ClCompile Include="win32_NNetSimuMenu.cpp" />
+    <ClCompile Include="win32_NNetAppMenu.cpp" />
     <ClCompile Include="win32_NNetSimuWindow.cpp" />
     <ClCompile Include="win32_NNetSimuController.cpp" />
   </ItemGroup>
