--- a/NNetSimu/WindowConfiguration1.cnf
+++ b/NNetSimu/WindowConfiguration1.cnf
@@ -1,4 +1,8 @@
+MoveWindow IDM_CONS_WINDOW 304 304 912 517
+ShowWindow IDM_CONS_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_APPL_WINDOW 759 257 1617 1021
 ShowWindow IDM_APPL_WINDOW SW_SHOWNORMAL
+MoveWindow IDM_HIST_INFO 0 300 301 116
+ShowWindow IDM_HIST_INFO SW_HIDE
 MoveWindow IDM_MAIN_WINDOW 767 308 1601 910
 ShowWindow IDM_MAIN_WINDOW SW_SHOWNORMAL
