--- a/NNetModel/NNetModel.vcxproj
+++ b/NNetModel/NNetModel.vcxproj
@@ -155,7 +155,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="NNetCoord.h" />
     <ClInclude Include="NNetModel.h" />
+    <ClInclude Include="NNetPoint.h" />
+    <ClInclude Include="pixelCoordinates.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
