--- a/NNetWindows/NNetSimuWindows.vcxproj.filters
+++ b/NNetWindows/NNetSimuWindows.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClInclude Include="win32_NNetWindow.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="win32_editor.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="win32_NNetWorkThread.cpp">
@@ -45,6 +48,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="win32_NNetWindow.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="win32_editor.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
