--- a/EvolutionCoreInterface/EvolutionCoreInterface.vcxproj
+++ b/EvolutionCoreInterface/EvolutionCoreInterface.vcxproj
@@ -152,6 +152,7 @@
     <ClInclude Include="dump.h" />
     <ClInclude Include="EvolutionCore.h" />
     <ClInclude Include="EvolutionTypes.h" />
+    <ClInclude Include="EvoPixelCoords.h" />
     <ClInclude Include="GeneType.h" />
     <ClInclude Include="gridCoord.h" />
     <ClInclude Include="GridDimensions.h" />
@@ -163,7 +164,6 @@
     <ClInclude Include="gridSelection.h" />
     <ClInclude Include="EvolutionCoreWrapperHelpers.h" />
     <ClInclude Include="EvolutionCoreWrappers.h" />
-    <ClInclude Include="pixelCoordinates.h" />
     <ClInclude Include="EvoStatistics.h" />
     <ClInclude Include="strategy.h" />
   </ItemGroup>
