--- a/EvolutionCoreInterface/EvolutionCoreInterface.vcxproj.filters
+++ b/EvolutionCoreInterface/EvolutionCoreInterface.vcxproj.filters
@@ -37,9 +37,6 @@
     <ClInclude Include="dump.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
-    <ClInclude Include="pixelCoordinates.h">
-      <Filter>Headerdateien</Filter>
-    </ClInclude>
     <ClInclude Include="gridPoint24.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
@@ -65,6 +62,9 @@
       <Filter>Headerdateien</Filter>
     </ClInclude>
     <ClInclude Include="gridPOI.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
+    <ClInclude Include="EvoPixelCoords.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
   </ItemGroup>
