--- a/NNetModel/NNetModel.vcxproj
+++ b/NNetModel/NNetModel.vcxproj
@@ -157,8 +157,8 @@
   <ItemGroup>
     <ClInclude Include="NNetCoord.h" />
     <ClInclude Include="NNetModel.h" />
+    <ClInclude Include="NNetPixelCoords.h" />
     <ClInclude Include="NNetPoint.h" />
-    <ClInclude Include="pixelCoordinates.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
