--- a/Win32_appFramework/Win32_appFramework.vcxproj
+++ b/Win32_appFramework/Win32_appFramework.vcxproj
@@ -158,7 +158,9 @@
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="win32_appMenu.h" />
+    <ClInclude Include="win32_appWIndowInterface.h" />
     <ClInclude Include="win32_baseAppWindow.h" />
+    <ClInclude Include="win32_messagePump.h" />
     <ClInclude Include="win32_modelWindow.h" />
     <ClInclude Include="win32_readBuffer.h" />
     <ClInclude Include="win32_status.h" />
@@ -170,6 +172,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="win32_baseAppWindow.cpp" />
+    <ClCompile Include="win32_messagePump.cpp" />
     <ClCompile Include="win32_modelWindow.cpp" />
     <ClCompile Include="win32_status.cpp" />
     <ClCompile Include="win32_WorkThread.cpp" />
