--- a/Win32_appFramework/Win32_appFramework.vcxproj.filters
+++ b/Win32_appFramework/Win32_appFramework.vcxproj.filters
@@ -42,6 +42,12 @@
     <ClInclude Include="win32_appMenu.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="win32_messagePump.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="win32_appWIndowInterface.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Image Include="small.ico">
@@ -62,6 +68,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="win32_baseAppWindow.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="win32_messagePump.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
