NNet zoom and move implemented

--- a/Evolution/WindowConfiguration3.cnf
+++ b/Evolution/WindowConfiguration3.cnf
@@ -14,7 +14,7 @@ MoveWindow IDM_DISP_WINDOW 3853 1319 181 219
 ShowWindow IDM_DISP_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_EDIT_WINDOW 3839 1568 331 486
 ShowWindow IDM_EDIT_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_MINI_WINDOW 5837 1234 316 239
-ShowWindow IDM_MINI_WINDOW SW_SHOWNORMAL
+MoveWindow IDM_MINI_WINDOW -8 -31 316 239
+ShowWindow IDM_MINI_WINDOW SW_HIDE
 MoveWindow IDM_MAIN_WINDOW 3840 1108 2560 945
 ShowWindow IDM_MAIN_WINDOW SW_SHOWNORMAL
